--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Test</h1>
+<h1>Hella Sweet App</h1>
 <p>Why am I so round?</p>
 
 <%= link_to "Sign up now!", "#", :class => "signup_button round" %>
