--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -21,7 +21,6 @@ section {
 	font-size: 120%;
 	padding: 20px;
 	background: #fff;
-	width:60%;
 	margin-left:auto;
 	margin-right:auto;
 }
@@ -78,7 +77,7 @@ a.signup_button {
 	text-align: center;
 	width: 190px;
 	color: #fff;
-	background: #006400;
+	background: blue;
 	font-size: 150%;
 	font-weight: bold;
 	padding: 20px;
@@ -88,5 +87,17 @@ a.signup_button {
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
+}
+
+footer {
+	text-align:center;
+	margin-top: 10px;
+	width: 710px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+footer nav {
+	float: none;
 }
 
