--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,8 @@
 <footer>
 	<nav class="round">
 		<ul>
-			<li><%= link_to "About", '#' %></li>
-			<li><%= link_to "Contact", '#' %></li>
-			<li><%= link_to "News", '#' %></li>
+			<li><%= link_to "About", about_path %></li>
+			<li><%= link_to "Contact", contact_path %></li>
 			<li><%= link_to "Spotcos", 'http://www.spotcos.com' %></li>
 		</ul>
 	</nav>
