--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,20 @@
-<h1>
-	<%= gravatar_for(@user) %>
-	<%= @user.name %>
-</h1>
+<table class="profile" summary="Profile Info">
+	<tr>
+		<td class="main">
+			<h1>
+				<%= gravatar_for(@user) %>
+				<%= @user.name %>
+			</h1>
+		</td>
+		<td class="sidebar round">
+			<strong>Name:</strong> <%= @user.name %><br />
+			<strong>URL:</strong> <%= link_to "Your page", user_path(@user.id) %>
+		</td>
+	</tr>
 
-	<%= @user.email %>
+	
+</table>
+
+
+
+	
