--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,27 @@
 <h1>Signup for new users!</h1>
+
+<%= form_for(@user) do |f| %>
+	<div class="field">
+		<%= f.text_field :name %>
+		<%= f.label :name %>
+		<br />
+		
+		<%= f.text_field :email %>
+		<%= f.label :email %>
+		<br />
+		
+		<%= f.password_field :password %>
+		<%= f.label :password %>
+		<br />
+
+		<%= f.password_field :password_confirmation %>
+		<%= f.label :password_confirmation, "Confirmation" %>
+		<br />
+		<br />
+	</div>
+	
+	<div class="actions">
+		<%= f.submit %>
+	</div>
+
+<% end %>
