--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,21 +1,22 @@
 <h1>Signup for new users!</h1>
 
 <%= form_for(@user) do |f| %>
+	<%= render 'shared/error_messages' %>
 	<div class="field">
-		<%= f.text_field :name %>
 		<%= f.label :name %>
+		<%= f.text_field :name %>
 		<br />
 		
-		<%= f.text_field :email %>
 		<%= f.label :email %>
+		<%= f.text_field :email %>
 		<br />
 		
-		<%= f.password_field :password %>
 		<%= f.label :password %>
+		<%= f.password_field :password %>
 		<br />
-
-		<%= f.password_field :password_confirmation %>
+		
 		<%= f.label :password_confirmation, "Confirmation" %>
+		<%= f.password_field :password_confirmation %>
 		<br />
 		<br />
 	</div>
