--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,9 +2,19 @@
 				<%= link_to logo, root_path %>
 				<nav class="round">
 					<ul>
-						<li><%= link_to "Home", root_path %></li>
-						<li><%= link_to "Help", help_path %></li>
-						<li><%= link_to "Sign in", signup_path %></li>
+						
+						
+						<%if current_user %>
+							<li><%= link_to "Home", root_path %></li>
+							<li><%= link_to "Profile", user_path(@current_user.id) %></li>
+							<li><%= link_to "Help", help_path %></li>
+							<li><%= link_to "Sign out", signout_path %></li>
+							
+						<%else%>
+							<li><%= link_to "Home", root_path %></li>
+							<li><%= link_to "Help", help_path %></li>
+							<li><%= link_to "Sign in", signin_path %></li>
+						<%end%>
 					</ul>
 				</nav>
 			</header>
