--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,8 +1,1 @@
-<h1>Help</h1>
-<%if current_user %>
-	<p>NAME:<%=@current_user.name%></p>
-	<p>ID:<%=@current_user.id%></p>
-	<p>EMAIL:<%=@current_user.email%></p>
-<%else%>
-	<p>Please login to view your info.</p>
-<%end%>
+<h1>M'aidez svp</h1>
