--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
 						<%if current_user %>
 							<li><%= link_to "Home", root_path %></li>
 							<li><%= link_to "Profile", user_path(@current_user.id) %></li>
-							<li><%= link_to "Help", help_path %></li>
+							<li><%= link_to "Settings", edit_user_path(@current_user.id) %></li>
 							<li><%= link_to "Sign out", signout_path %></li>
 							
 						<%else%>
