--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,28 +1,9 @@
 <h1>Signup for new users!</h1>
 
-<%= form_for(@user) do |f| %>
-	<%= render 'shared/error_messages' %>
-	<div class="field">
-		<%= f.label :name %>
-		<%= f.text_field :name %>
-		<br />
-		
-		<%= f.label :email %>
-		<%= f.text_field :email %>
-		<br />
-		
-		<%= f.label :password %>
-		<%= f.password_field :password %>
-		<br />
-		
-		<%= f.label :password_confirmation, "Confirmation" %>
-		<%= f.password_field :password_confirmation %>
-		<br />
-		<br />
-	</div>
-	
+<%= form_for(@user) do |@f| %>
+	<%= render 'fields' %>
 	<div class="actions">
-		<%= f.submit "signup" %>
+		<%= @f.submit "signup" %>
 	</div>
 
 <% end %>
