--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,6 +18,10 @@
 					</div>
 				<% end %>
 				
+				<br />
+				
+				<%= render "shared/display_posts", :paramz => @user.feed %>
+				
 			</td>
 			
 			<td class="sidebar round">
@@ -25,6 +29,9 @@
 			</td>
 			
 		</tr>
+		
+		
+		
 	</table>
 
 <%end%>
