--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,24 +8,7 @@
 			
 			<% if @user.microposts.any? %>
 				<h3 style="text-align:center;"><%= @user.name %>'s posts:</h3>
-				<% @microposts = @user.microposts.paginate(:page => params[:page],:per_page => 8) %>
-				<%= will_paginate(@microposts) %>
-				<table class="microposts" summary="User's microposts">
-					
-					<% for micropost in @microposts do %>
-					<tr>
-						<td class="micropost">
-							<strong style="font-size:130%;font-style:italic;"><span class="content">"<%= micropost.content %>"</span></strong>
-							<br />
-							<em><span class="timestamp">Posted on <%= time_ago_in_words(micropost.created_at)%> ago.</span></em>
-						</td>
-					</tr>
-					<% end %>
-					
-					
-					
-				</table>
-				<%= will_paginate(@microposts) %>
+				<%= render "shared/display_posts", :paramz => @user.microposts %>
 			<% end %>
 			
 		</td>
