formal args shit NOW WITH LESS RETARD

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Signup for new users!</h1>
 
-<%= form_for(@user) do |f| %>
-	@f = f
+<%= form_for(@user) do |f| @f = f %>
+	
 	<%= render 'fields' %>
 	<div class="actions">
 		<%= @f.submit "signup" %>
