--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,6 +26,8 @@
 			
 			<td class="sidebar round">
 				<%= render 'shared/user_info' %>
+				<br />
+				<%= render "shared/user_followstatus"%>
 			</td>
 			
 		</tr>
