--- a/app/views/shared/_user_followstatus.html.erb
+++ b/app/views/shared/_user_followstatus.html.erb
@@ -1,2 +1,7 @@
 <div>Following: <%= link_to(@user.following.length.to_s, following_user_path(@user)) %></div>
 <div>Followers: <%= link_to(@user.getFollowers.length.to_s, getfollowers_user_path(@user)) %></div>
+<div style="margin-top:30px;">
+	<% for user in @user.following.each do %>
+		<%= link_to gravatar_for(user, :size => 30), user %>
+	<% end %>
+</div>
