feed et finished

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,3 @@
 <marquee><h1>Comment est-ce que quelqu'un peut entrer dans ruby on rails?</h1></marquee>
+<p>This is a website written in ruby on rails. It's the sample app from the Ruby on Rails: Learn by Example (by Michael Hartl) if you didn't notice.
+	But don't let that stop you-it's totally hella sweet</p>
