--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,1 +1,2 @@
 <h1>M'aidez svp</h1>
+<p>Make account and start posting. There are probably bugs and stuff everywhere, test-driven programming is for N00BZ</p>
