--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
 <%if !current_user %>
-	<h1>Ruby on Rails testapp</h1>
+	<h1>Welcome ShTwitter!</h1>
+	<p>The latest and <blink>greates</blink> site of SOCIAL MEDIA interaction. Make posts, follow friends and be social in general!</p>
 	<p>Sign in or make an account!</p>
 	<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
 
