--- a/app/views/shared/_follow_form.html.erb
+++ b/app/views/shared/_follow_form.html.erb
@@ -1,18 +1,5 @@
 <% if current_user != @user %>
 	<div id="follow_form">
-		<% if current_user.following?(@user) %>
-			<!-- goes to relationships controller, delete action -->
-			<%= form_for(current_user.relationships.find_by_followed_id(@user.id), :html => {:method => :delete}) do |f| %>
-				<%= f.submit "Unfollow" %>
-			<% end %>
-
-		<% else %>
-			<!-- goes to relationships controller, create action -->
-			<%= form_for(current_user.relationships.build(:followed_id => @user.id)) do |f| %> 
-				<%= f.hidden_field :followed_id %>
-				<%= f.submit "Follow" %>
-			<% end %>
-
-		<% end %>
+		<%= render 'shared/followbutton' %>
 	</div>
 <% end %>
